fix infotext wrapping

--- a/javascript/sdnext.css
+++ b/javascript/sdnext.css
@@ -95,7 +95,7 @@ div#extras_scale_to_tab div.form{ flex-direction: row; }
 #img2img_sketch, #img2maskimg, #inpaint_sketch { overflow: overlay !important; resize: auto; background: var(--panel-background-fill); z-index: 5; }
 .image-buttons button{ min-width: auto; }
 .infotext { overflow-wrap: break-word; line-height: 1.5em; }
-.infotext > p { padding-left: 1em; text-indent: -1em; white-space: pre; text-wrap: pretty; }
+.infotext > p { padding-left: 1em; text-indent: -1em; white-space: pre-wrap; }
 .tooltip { display: block; position: fixed; top: 1em; right: 1em; padding: 0.5em; background: var(--input-background-fill); color: var(--body-text-color); border: 1pt solid var(--button-primary-border-color);
   width: 22em; min-height: 1.3em; font-size: 0.8em; transition: opacity 0.2s ease-in; pointer-events: none; opacity: 0; z-index: 999; }
 .tooltip-show { opacity: 0.9; }
